# FindDupFoto

./: CMakeLists.txt  README.md  build.sh  clean.sh
src/: FindDupFoto.c  find_missing.c
